--- a/PredictiveMaintenance/PredMaintMauiApp/PredMaintMauiApp.csproj
+++ b/PredictiveMaintenance/PredMaintMauiApp/PredMaintMauiApp.csproj
@@ -57,7 +57,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Remove="Resources\Raw\PredictiveMaintenanceModel.zip" />
+	  <None Remove="Resources\Raw\predictivemaintenance.mlnet" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -75,15 +75,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiAsset Update="Resources\Raw\PredictiveMaintenanceModel.zip">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </MauiAsset>
-	</ItemGroup>
-
-	<ItemGroup>
 	  <MauiXaml Update="Presentation\Views\PredictView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiAsset Update="Resources\Raw\predictivemaintenance.mlnet">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </MauiAsset>
 	</ItemGroup>
 
 </Project>
